- Removed usermode +I (invisibility)
- Fixed link::port bug reported by AngryWolf: was signed so ports >32767 had problems
- Fixed a win32 bug that could cause crashes when editting files. Reported by camje_lemon
  (#0000717)
- Removed channel mode +H (not needed without umode +I)
- Allow coadmins to use /rehash -flags. Suggested by kyotou
- Added channel mode +M. Can't talk unless you are using a registered nick. Suggested by 
  CaliMonk
- Fixed compile warning in ssl.c.
- Updated docs, removed umode +I and cmode +H and added cmode +M
- Removed some left over +I code
- Added set::restrict-usermodes to /stats S (reported by AngryWolf)
- Zip links: Added link::compression-level so you can set the compression level per link.
- set::services-server is now required to be set (#0000730).
- Fixed /list memory leak.
- Fixed MyConnect()/MyClient() bug causing memory leak.
- Fixed a bug with TKL and rehash
- Recoded aliases (regex style) to be much faster.
- Removed some leftover +I code
- Fixed a bug in /who where +s was case sensitive. Reported by jollino (#0000736)
- Removed some debugging messages
- Fixed an alias bug reported by darko`` where alias::format::type of "normal" produced
  an error.
- Fixed some case insensitive checks in configfile parsing, fixed to be case sensitive.
- Module changes: added two hooks: HOOKTYPE_USERMSG and HOOKTYPE_CHANMSG, changed umode_get.
- Fixed bug with chmode +u: Quits/nick changes of other users were shown.
- Added /who *.host.com support (ircop only), this was already possible via /who -h <host>
  but most ppl expect it to work this way too.
- Updated win32 compile instructions
- Fixed set::dns error messages
- Fixed win32 compile error
- Fixed chmode +u again.
- Fixed a bug reported by mQ where it was possible to include spaces in a TKL host
- Documentation updates (added a section about features).
- Fixed remote /rehash bug (#0000600).
- Documentation updates (unreal32docs.html, example.conf).