@@ -1,0 +1,53 @@
+/*  
+ Unreal Internet Relay Chat Daemon
+ Copyright (C) Carsten V. Munk 2000
+
+ NOTE: Those words are not meant to insult you (the user)
+       but is meant to be a list of words so that quit message censoring 
+       will work properly. You can easily modify this file at your will.
+       If you got words to add to this file, please mail badword badwords@tspre.org
+
+ 
+
+
+
+ 
+                This is some filling space, scroll down to see the words
+
+ 
+
+
+ 
+
+
+ 
+
+
+ 
+
+
+ 
+
+
+*/
+badword quit { word "pussy";  };
+badword quit { word "fuck";  };
+badword quit { word "whore";  };
+badword quit { word "slut";  };
+badword quit { word "shit";  };
+badword quit { word "asshole";  };
+badword quit { word "bitch";  };
+badword quit { word "cunt";  };
+badword quit { word "vagina";  };
+badword quit { word "penis";  };
+badword quit { word "jackass";  };
+badword quit { word "*fucker*";  };
+badword quit { word "faggot";  };
+badword quit { word "fag";  };
+badword quit { word "horny";  };
+badword quit { word "gay";  };
+badword quit { word "dickhead";  };
+badword quit { word "sonuvabitch";  };
+badword quit { word "*fuck*";  };
+badword quit { word "boobs";  };
+badword quit { word "tits";  };
