@@ -1214,13 +1214,13 @@ loadmodule "src/modules/scan_http.so";
   };</p>
 <p>The badword block allows you to manipulate the list used for user and channel 
   mode +G to strip &quot;badwords&quot;. The badword:: specifies the type, valid 
-  types are channel and messages, channel is for the channel +G list, and message 
-  is for the user +G list. The badword::word can be a simple word or a regular expression
-  we should search for. The badword::replace is what we should replace 
-  this match with. If badword::replace is left out, the word is replaced with 
-  &lt;censored&gt;.</p>
+  types are channel, message, and quit, channel is for the channel +G list, message 
+  is for the user +G list, and quit is for quit message censoring. The badword::word
+  can be a simple word or a regular expression we should search for. The 
+  badword::replace is what we should replace this match with. If badword::replace 
+  is left out, the word is replaced with &lt;censored&gt;.</p>
 <p>Example<br>
-  banword channel {<br>
+  badword channel {<br>
   word shit;<br>
   replace shoot;<br>
   };</p>
