@@ -89,6 +89,7 @@ extern ConfigItem_link		*conf_link;
 extern ConfigItem_ban		*conf_ban;
 extern ConfigItem_badword	*conf_badword_channel;
 extern ConfigItem_badword       *conf_badword_message;
+extern ConfigItem_badword	*conf_badword_quit;
 extern ConfigItem_deny_dcc	*conf_deny_dcc;
 extern ConfigItem_deny_channel  *conf_deny_channel;
 extern ConfigItem_deny_link	*conf_deny_link;
@@ -309,6 +310,7 @@ extern int  check_for_chan_flood(aClient *cptr, aClient *sptr, aChannel *chptr);
 extern int  check_for_target_limit(aClient *sptr, void *target, const char *name);
 extern char *stripbadwords_message(char *str);
 extern char *stripbadwords_channel(char *str);
+extern char *stripbadwords_quit(char *str);
 extern char *stripbadwords(char *, ConfigItem_badword *);
 extern unsigned char *StripColors(unsigned char *);
 extern const char *StripControlCodes(unsigned char *text);
